PDF: Fix a failing find-in-page corner case.

When the result is the text at the end of a page, the text highlight for
the search result is incorrect.

BUG=683414

Review-Url: https://codereview.chromium.org/2645813007
Cr-Commit-Position: refs/heads/master@{#445718}

Former-commit-id: 3ed6d4447aba42525fc8a0020320325542925049